--- a/app/src/main/res/layout/fragment_update_delete_product.xml
+++ b/app/src/main/res/layout/fragment_update_delete_product.xml
@@ -33,16 +33,16 @@
                 android:layout_height="38dp" android:id="@+id/categorySpinner"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/addCategoryButton"
-                app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" android:layout_marginTop="36dp"
-                app:layout_constraintHorizontal_bias="0.383"/>
+                app:layout_constraintHorizontal_bias="0.345" android:layout_marginTop="34dp"
+                app:layout_constraintTop_toBottomOf="@+id/productUpdateDescriptionText"/>
         <Button
                 android:text="Add"
                 android:layout_width="88dp"
                 android:layout_height="43dp"
                 android:background="@drawable/rounded_button" android:id="@+id/addCategoryButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" android:layout_marginTop="36dp"
-                android:layout_marginEnd="28dp"/>
+                android:layout_marginEnd="36dp" android:layout_marginTop="34dp"
+                app:layout_constraintTop_toBottomOf="@+id/productUpdateDescriptionText"/>
         <Button
                 android:text="Update"
                 android:layout_width="162dp"
@@ -58,6 +58,16 @@
                 android:background="@drawable/rounded_button" android:id="@+id/deleteProductButton"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
                 app:layout_constraintTop_toBottomOf="@+id/categorySpinner" android:layout_marginTop="32dp"/>
+        <EditText
+                android:layout_width="343dp"
+                android:layout_height="50dp"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/productUpdateDescriptionText"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
+                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/productPriceTextView"
+                android:layout_marginEnd="38dp" app:layout_constraintEnd_toEndOf="parent"
+                android:hint="Enter description"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
